# My-Assignment-Solver

./: .env  .pre-commit-config.yaml  README.md  demo_script.md  email_template.txt  env.example  package-lock.json  pyproject.toml  release_notes.md  submission_checklist.md  test_server.py
.github/workflows/: ci.yml  release.yml
agent/executor/: executor.py
agent/planner/: planner.py  prompt_templates.md
agent/tools/: code_gen.py  git_util.py  test_runner.py
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py  rag.py  tasks.py
backend/app/api/: assignments.py  plans.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  database_models.py  pydantic_models.py
data/: .gitkeep
docs/: demo_steps.md  interaction_logs.md  security.md  system_design.md
frontend/: .eslintrc.json  Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/src/components/: Chat.tsx  ErrorMessage.tsx  Header.tsx  LoadingSpinner.tsx  PlanEditor.tsx  Sidebar.tsx  Upload.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
infra/: docker-compose.dev.yml  docker-compose.yml  init.sql
scripts/: ingest.py
tests/e2e/: test_api.py
tests/unit/: test_executor.py  test_planner.py  test_tools.py
worker/: start_beat.py  start_worker.py
